// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tidrangescan.sql > line 7 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE ctid < '(1, 0)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 56,
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 63,
                        "sval": {
                          "sval": "(1, 0)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 11 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE ctid > '(9, 0)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 56,
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 63,
                        "sval": {
                          "sval": "(9, 0)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 16 1`] = `
[
  "INSERT INTO tidrangescan SELECT i,repeat('x', 100) FROM generate_series(1,200) AS s(i)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tidrangescan",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "s",
                        "colnames": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                        ],
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 72,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 200,
                                        },
                                        "location": 74,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 56,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 32,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 32,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "location": 41,
                                "sval": {
                                  "sval": "x",
                                },
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 100,
                                },
                                "location": 46,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "repeat",
                              },
                            },
                          ],
                          "location": 34,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 21 1`] = `
[
  "DELETE FROM tidrangescan
WHERE substring(ctid::text FROM ',(\\d+)\\)')::integer > 10 OR substring(ctid::text FROM '\\((\\d+),')::integer > 2",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tidrangescan",
              "relpersistence": "p",
            },
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "ctid",
                                            },
                                          },
                                        ],
                                        "location": 41,
                                      },
                                    },
                                    "location": 45,
                                    "typeName": {
                                      "location": 47,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                                {
                                  "A_Const": {
                                    "location": 57,
                                    "sval": {
                                      "sval": ",(\\d+)\\)",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_SQL_SYNTAX",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "substring",
                                  },
                                },
                              ],
                              "location": 31,
                            },
                          },
                          "location": 68,
                          "typeName": {
                            "location": 70,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 78,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 10,
                          },
                          "location": 80,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "FuncCall": {
                              "args": [
                                {
                                  "TypeCast": {
                                    "arg": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "ctid",
                                            },
                                          },
                                        ],
                                        "location": 96,
                                      },
                                    },
                                    "location": 100,
                                    "typeName": {
                                      "location": 102,
                                      "names": [
                                        {
                                          "String": {
                                            "sval": "text",
                                          },
                                        },
                                      ],
                                      "typemod": -1,
                                    },
                                  },
                                },
                                {
                                  "A_Const": {
                                    "location": 112,
                                    "sval": {
                                      "sval": "\\((\\d+),",
                                    },
                                  },
                                },
                              ],
                              "funcformat": "COERCE_SQL_SYNTAX",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "substring",
                                  },
                                },
                              ],
                              "location": 86,
                            },
                          },
                          "location": 123,
                          "typeName": {
                            "location": 125,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 133,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 135,
                        },
                      },
                    },
                  },
                ],
                "boolop": "OR_EXPR",
                "location": 83,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 30 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE ctid <= '(1,5)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 56,
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": "<=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 64,
                        "sval": {
                          "sval": "(1,5)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 43 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE '(2,8)' < ctid",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 56,
                        "sval": {
                          "sval": "(2,8)",
                        },
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 66,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 47 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE ctid >= '(2,8)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 56,
                      },
                    },
                    "location": 61,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 64,
                        "sval": {
                          "sval": "(2,8)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 56 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT ctid FROM tidrangescan WHERE ctid > '(1,4)' AND '(1,7)' >= ctid",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 37,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 56,
                            },
                          },
                          "location": 61,
                          "name": [
                            {
                              "String": {
                                "sval": ">",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 63,
                              "sval": {
                                "sval": "(1,4)",
                              },
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "location": 75,
                              "sval": {
                                "sval": "(1,7)",
                              },
                            },
                          },
                          "location": 83,
                          "name": [
                            {
                              "String": {
                                "sval": ">=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 86,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 71,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 65 1`] = `
[
  "SELECT ctid FROM tidrangescan WHERE ctid > '(0,65535)' AND ctid < '(1,0)' LIMIT 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tidrangescan",
                  "relpersistence": "p",
                },
              },
            ],
            "limitCount": {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 80,
              },
            },
            "limitOption": "LIMIT_OPTION_COUNT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                      "location": 41,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 43,
                          "sval": {
                            "sval": "(0,65535)",
                          },
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 59,
                        },
                      },
                      "location": 64,
                      "name": [
                        {
                          "String": {
                            "sval": "<",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "location": 66,
                          "sval": {
                            "sval": "(1,0)",
                          },
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 55,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 68 1`] = `
[
  "SELECT ctid FROM tidrangescan WHERE ctid > '(4294967295,65535)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tidrangescan",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 43,
                    "sval": {
                      "sval": "(4294967295,65535)",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 72 1`] = `
[
  "SELECT ctid FROM tidrangescan WHERE ctid >= (SELECT NULL::tid)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "tidrangescan",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "SubLink": {
                    "location": 44,
                    "subLinkType": "EXPR_SUBLINK",
                    "subselect": {
                      "SelectStmt": {
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 52,
                              "val": {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "isnull": true,
                                      "location": 52,
                                    },
                                  },
                                  "location": 56,
                                  "typeName": {
                                    "location": 58,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "tid",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 75 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT t.ctid,t2.c FROM tidrangescan t,
LATERAL (SELECT count(*) c FROM tidrangescan t2 WHERE t2.ctid <= t.ctid) t2
WHERE t.ctid < '(1,0)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "alias": {
                        "aliasname": "t",
                      },
                      "inh": true,
                      "location": 44,
                      "relname": "tidrangescan",
                      "relpersistence": "p",
                    },
                  },
                  {
                    "RangeSubselect": {
                      "alias": {
                        "aliasname": "t2",
                      },
                      "lateral": true,
                      "subquery": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "alias": {
                                  "aliasname": "t2",
                                },
                                "inh": true,
                                "location": 92,
                                "relname": "tidrangescan",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 76,
                                "name": "c",
                                "val": {
                                  "FuncCall": {
                                    "agg_star": true,
                                    "funcformat": "COERCE_EXPLICIT_CALL",
                                    "funcname": [
                                      {
                                        "String": {
                                          "sval": "count",
                                        },
                                      },
                                    ],
                                    "location": 76,
                                  },
                                },
                              },
                            },
                          ],
                          "whereClause": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "t2",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "ctid",
                                      },
                                    },
                                  ],
                                  "location": 114,
                                },
                              },
                              "location": 122,
                              "name": [
                                {
                                  "String": {
                                    "sval": "<=",
                                  },
                                },
                              ],
                              "rexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "t",
                                      },
                                    },
                                    {
                                      "String": {
                                        "sval": "ctid",
                                      },
                                    },
                                  ],
                                  "location": 125,
                                },
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t",
                              },
                            },
                            {
                              "String": {
                                "sval": "ctid",
                              },
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "t2",
                              },
                            },
                            {
                              "String": {
                                "sval": "c",
                              },
                            },
                          ],
                          "location": 34,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "t",
                            },
                          },
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 142,
                      },
                    },
                    "location": 149,
                    "name": [
                      {
                        "String": {
                          "sval": "<",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 151,
                        "sval": {
                          "sval": "(1,0)",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 80 1`] = `
[
  "SELECT t.ctid,t2.c FROM tidrangescan t,
LATERAL (SELECT count(*) c FROM tidrangescan t2 WHERE t2.ctid <= t.ctid) t2
WHERE t.ctid < '(1,0)'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "t",
                  },
                  "inh": true,
                  "location": 24,
                  "relname": "tidrangescan",
                  "relpersistence": "p",
                },
              },
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "t2",
                  },
                  "lateral": true,
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "alias": {
                              "aliasname": "t2",
                            },
                            "inh": true,
                            "location": 72,
                            "relname": "tidrangescan",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 56,
                            "name": "c",
                            "val": {
                              "FuncCall": {
                                "agg_star": true,
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "count",
                                    },
                                  },
                                ],
                                "location": 56,
                              },
                            },
                          },
                        },
                      ],
                      "whereClause": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t2",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 94,
                            },
                          },
                          "location": 102,
                          "name": [
                            {
                              "String": {
                                "sval": "<=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "t",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 105,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t",
                          },
                        },
                        {
                          "String": {
                            "sval": "ctid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 14,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "t2",
                          },
                        },
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                      ],
                      "location": 14,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "t",
                        },
                      },
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 122,
                  },
                },
                "location": 129,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 131,
                    "sval": {
                      "sval": "(1,0)",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 87 1`] = `
[
  "EXPLAIN (COSTS OFF)
DECLARE c SCROLL CURSOR FOR SELECT ctid FROM tidrangescan WHERE ctid < '(1,0)'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "DeclareCursorStmt": {
                "options": 258,
                "portalname": "c",
                "query": {
                  "SelectStmt": {
                    "fromClause": [
                      {
                        "RangeVar": {
                          "inh": true,
                          "location": 65,
                          "relname": "tidrangescan",
                          "relpersistence": "p",
                        },
                      },
                    ],
                    "limitOption": "LIMIT_OPTION_DEFAULT",
                    "op": "SETOP_NONE",
                    "targetList": [
                      {
                        "ResTarget": {
                          "location": 55,
                          "val": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "ctid",
                                  },
                                },
                              ],
                              "location": 55,
                            },
                          },
                        },
                      },
                    ],
                    "whereClause": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "ctid",
                                },
                              },
                            ],
                            "location": 84,
                          },
                        },
                        "location": 89,
                        "name": [
                          {
                            "String": {
                              "sval": "<",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "location": 91,
                            "sval": {
                              "sval": "(1,0)",
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 90 1`] = `
[
  "BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 99 1`] = `
[
  "DROP TABLE tidrangescan",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tidrangescan",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`tidrangescan.sql > line 101 1`] = `
[
  "RESET enable_seqscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
